View Issue Details

IDProjectCategoryView StatusLast Update
0022934CommunityOCCT:Data Exchangepublic2012-04-16 12:26
ReporterPawel Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.5.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0022934: Wrong delete operator in IGESSelect_SelectFromDrawing.cxx / IGESSelect_SelectFromSingleView.cxx
DescriptionIGESSelect_SelectFromDrawing.cxx (line 44) / IGESSelect_SelectFromSingleView.cxx (line 31) should use the "delete []" operator as arrays are deleted.
Additional information
and documentation updates
Delete some unused code in IGESSelect/IGESSelect_SelectFromDrawing::RootResult(), IGESSelect_SelectFromSingleView::RootResult()
TagsNo tags attached.
Test case numbertest case is not required

Activities

abv

2012-01-30 14:29

manager   ~0019304

I guess we shall remove use of variable nums and other irrelevant code around it in both these classes, as it is not used (at least I do not see any use of it -- it was probably some debug stuff?).

ama

2012-02-09 17:13

developer   ~0019494

SVN branch http://svn/svn/occt/branches/OCC22934 (revision 10394) is ready to be reviewed.

abv

2012-02-09 17:49

manager   ~0019498

No remarks, please test

mkv

2012-02-10 16:38

tester   ~0019512

Last edited: 2012-02-10 16:42

Dear BugMaster,
Workbench KAS:dev:mkv-22934-occt was created from SVN branch http://svn/svn/occt/branches/OCC22934
(and mkv-22934-products from trunk) and compiled on Linux platform.

aan

2012-02-13 17:05

tester   ~0019533

Last edited: 2012-02-13 17:06

Dear BugMaster,
Workbench KAS:dev:mkv-22934-occt from SVN branch http://svn/svn/occt/branches/OCC22934
(and mkv-22934-products from trunk) was successfully compiled and tested on Linux.

There are following regressions in mkv-22934-products regarding to KAS:dev:products-20120210-opt

chl 934 P9

See results in /QADisk/occttests/results/KAS/dev/mkv-22934-products_10022012/lin
See reference results in /QADisk/occttests/results/KAS/dev/products-20120210-opt_10022012/lin
See test cases in /QADisk/occttests/tests/ED
N.B. In order to launch testing case you can make use the following instructions
http://doc/doku.php?id=occt:certification

abv

2012-02-13 18:46

manager   ~0019535

The case chl 934 P9 should not be considered a regression here: it corresponds to issue #22967 which has been integrated to trunk (rev 10423) after last merge of branch OCC22934 with trunk (rev 10418).

bugmaster

2012-02-17 16:06

administrator   ~0019634

Integrated into trunk of occt repository

Date: 2012-02-17 16:04:22 +0400 (Fri, 17 Feb 2012)
New Revision: 10508

Modified:
   trunk/src/IGESSelect/IGESSelect_SelectFromDrawing.cxx
   trunk/src/IGESSelect/IGESSelect_SelectFromSingleView.cxx

Pawel

2012-04-12 17:13

developer   ~0020370

Verified. Please close.

Related Changesets

occt: master 65c01700

2012-02-17 12:04:22

ama


Committer: bugmaster Details Diff
0022934: Wrong delete operator in IGESSelect_SelectFromDrawing.cxx / IGESSelect_SelectFromSingleView.cxx Affected Issues
0022934
mod - src/IGESSelect/IGESSelect_SelectFromDrawing.cxx Diff File
mod - src/IGESSelect/IGESSelect_SelectFromSingleView.cxx Diff File

Issue History

Date Modified Username Field Change
2012-01-30 14:10 Pawel New Issue
2012-01-30 14:10 Pawel Assigned To => gka
2012-01-30 14:29 abv Note Added: 0019304
2012-01-30 14:29 abv Assigned To gka => ama
2012-01-30 14:29 abv Status new => assigned
2012-02-09 17:13 ama Note Added: 0019494
2012-02-09 17:13 ama Assigned To ama => abv
2012-02-09 17:13 ama Status assigned => resolved
2012-02-09 17:49 abv Note Added: 0019498
2012-02-09 17:49 abv Assigned To abv => ama
2012-02-09 17:49 abv Status resolved => reviewed
2012-02-10 16:38 mkv Note Added: 0019512
2012-02-10 16:42 mkv Note Edited: 0019512
2012-02-10 18:15 ama Additional Information Updated
2012-02-13 17:05 aan Note Added: 0019533
2012-02-13 17:05 aan Test case number => test case is not required
2012-02-13 17:06 aan Note Edited: 0019533
2012-02-13 17:06 aan Note Edited: 0019533
2012-02-13 17:13 aan Status reviewed => assigned
2012-02-13 18:46 abv Note Added: 0019535
2012-02-13 18:47 abv Status assigned => resolved
2012-02-13 18:47 abv Status resolved => reviewed
2012-02-13 18:47 abv Status reviewed => tested
2012-02-17 16:05 bugmaster Assigned To ama => Pawel
2012-02-17 16:05 bugmaster Target Version => 6.5.3
2012-02-17 16:06 bugmaster Note Added: 0019634
2012-02-17 16:06 bugmaster Status tested => verified
2012-02-17 16:06 bugmaster Resolution open => fixed
2012-03-29 17:26 bugmaster Changeset attached => occt master 65c01700
2012-04-12 17:13 Pawel Note Added: 0020370
2012-04-16 12:26 Pawel Assigned To Pawel => bugmaster