0022934: Wrong delete operator in IGESSelect_SelectFromDrawing.cxx / IGESSelect_SelectFromSingleView.cxx