src/IGESSelect/IGESSelect_SelectFromDrawing.cxx
@@ -15,9 +15,7 @@
   Interface_EntityIterator draws = InputResult(G);
   if (draws.NbEntities() == 0) return list;
   Standard_Integer nb = G.Size();
-  char* nums = new char[nb+1];
   Standard_Integer i; // svv Jan11 2000 : porting on DEC
-  for (i = 1; i <= nb; i ++) nums[i] = 0;
 
 //  Pour chaque Drawing : prendre d une part l integralite de son contenu,
 //  (c-a-d avec le "Frame"), d autre part les entites attachees a ses vues
@@ -28,11 +26,6 @@
     list.GetOneItem (igesent);
     Interface_EntityIterator someviews = G.Shareds (draws.Value());
     list.AddList (someviews.Content());
-    for (someviews.Start(); someviews.More(); someviews.Next()) {
-      DeclareAndCast(IGESData_ViewKindEntity,igesview,someviews.Value());
-      Standard_Integer nv = G.EntityNumber(igesview);
-      if (nv > 0 && nv <= nb) nums[nv] = 1;
-    }
   }
   for (i = 1; i <= nb; i ++) {
 //    if (!G.IsPresent(i)) continue;
@@ -41,7 +34,6 @@
     Standard_Integer nv = G.EntityNumber (igesent->View());
     if (nv > 0 && nv <= nb) list.GetOneItem(igesent);
   }
-  delete nums;
   return list;
 }
 
